--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
-    <script src="./js/visualize.js"></script>
+    <script src="js/visualize.js"></script>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
   </head>
   <body>
+  	<div class="sidenav">
+  <a href="#">News 1</a>
+  <a href="#">News 2</a>
+  <a href="#">News 3</a>
+  <a href="#">News 4</a>
+  <a href="#">News 5</a>
+	</div>
+
+
+  	<br> <br> <br> <br>
+  	<form action="/action_page.php">
+  		<center>
+  <div class=" col-lg-7 col-md-offset-3 center_div">
+    <input id= 'text'type="text" class="form-control input-lg" placeholder="Search for news">
+    <button id='submit' type="button" class="btn btn-light">Submit</button>
+
+  </div>
+</center>
+    </form>
   </body>
 </html>
