--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
-    <script src="js/visualize.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,6 @@
 
 
   	<br> <br> <br> <br>
-  	<form action="/action_page.php">
   		<center>
   <div class=" col-lg-7 col-md-offset-3 center_div">
     <input id= 'text'type="text" class="form-control input-lg" placeholder="Search for news">
@@ -29,6 +28,8 @@
 
   </div>
 </center>
-    </form>
+
+      <script src="js/visualize.js"></script>
+
   </body>
 </html>
